--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "npm run eslint",
     "eslint": "eslint --ext .js src/",
     "start": "node ./src/service/service.js",
-    "start.dev": "nodemon ./src/main.js",
     "start-front-server": "nodemon ./src/express/index.js"
   },
   "repository": {
@@ -28,6 +27,7 @@
   "dependencies": {
     "chalk": "3.0.0",
     "express": "4.17.1",
+    "nanoid": "3.1.16",
     "pug": "3.0.0"
   }
 }
