--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jest": "jest",
     "test::rest": "jest src/service/api/*.test.js",
     "eslint": "eslint --ext .js src/",
-    "start": "node ./src/service/service.js",
+    "start": "cross-env NODE_ENV=production node ./src/service/service.js",
+    "start::dev": "cross-env NODE_ENV=development node ./src/service/service.js",
     "start-front-server": "nodemon ./src/express/index.js"
   },
   "repository": {
@@ -26,12 +27,15 @@
     "eslint-config-htmlacademy": "0.5.2",
     "jest": "26.6.3",
     "nodemon": "2.0.2",
+    "pino-pretty": "4.3.0",
     "supertest": "6.0.1"
   },
   "dependencies": {
     "chalk": "3.0.0",
+    "cross-env": "7.0.2",
     "express": "4.17.1",
     "nanoid": "3.1.16",
+    "pino": "6.7.0",
     "pug": "3.0.0"
   }
 }
