--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test::rest": "jest src/service/api/*.test.js",
     "eslint": "eslint --ext .js src/",
     "start": "cross-env NODE_ENV=production node ./src/service/service.js",
-    "start::dev": "cross-env NODE_ENV=development node ./src/service/service.js",
+    "start::dev": "cross-env NODE_ENV=development nodemon ./src/service/service.js",
+    "start::debug": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon ./src/service/service.js",
     "start-front-server": "nodemon ./src/express/index.js"
   },
   "repository": {
