--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "axios": "0.21.0",
+    "bcrypt": "5.0.1",
     "chalk": "3.0.0",
     "cross-env": "7.0.2",
     "dotenv": "10.0.0",
