--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js",
     "start::dev": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js",
     "start::debug": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon -r dotenv/config ./src/service/service.js",
-    "start-front-server": "nodemon ./src/express/index.js"
+    "start-front-server": "nodemon -r dotenv/config ./src/express/index.js"
   },
   "repository": {
     "type": "git",
@@ -36,9 +36,11 @@
     "axios": "0.21.0",
     "bcrypt": "5.0.1",
     "chalk": "3.0.0",
+    "connect-session-sequelize": "7.1.1",
     "cross-env": "7.0.2",
     "dotenv": "10.0.0",
     "express": "4.17.1",
+    "express-session": "1.17.2",
     "joi": "17.4.2",
     "multer": "1.4.2",
     "nanoid": "3.1.16",
