--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jest": "jest",
     "test::rest": "jest src/service/api/*.test.js",
     "eslint": "eslint --ext .js src/",
+    "start-cli": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js",
     "start-back-server": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js --server",
     "start-back-server::debug": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon -r dotenv/config ./src/service/service.js --server",
     "start-front-server": "nodemon -r dotenv/config ./src/express/index.js",
