--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "pg": "8.7.1",
     "pino": "6.7.0",
     "pug": "2.0.4",
-    "sequelize": "6.6.5"
+    "sequelize": "6.6.5",
+    "socket.io": "4.1.3"
   },
   "engines": {
     "node": ">=12.14.1"
