--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "start-cli": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js",
     "start-back-server": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js --server",
     "start-back-server::debug": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon -r dotenv/config ./src/service/service.js --server",
-    "start-front-server": "cross-env NODE_ENV=production node -r dotenv/config ./src/express/index.js",
-    "start-front-server::debug": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon -r dotenv/config ./src/express/index.js",
+    "start-front-server": "cross-env NODE_ENV=production node -r dotenv/config ./src/express/app.js",
+    "start-front-server::debug": "cross-env NODE_ENV=development LOG_LEVEL=debug nodemon -r dotenv/config ./src/express/app.js",
     "start-servers": "concurrently \"npm run start-back-server\" \"npm run start-front-server\"",
     "start-servers::debug": "concurrently \"npm run start-back-server::debug\" \"npm run start-front-server::debug\"",
     "start": "npm run start-servers",
